--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
     <p>
       <i class="bi bi-telephone-fill"></i> 
       <strong>Phone:</strong> 
-      <a href="7010872511" style="text-decoration:none; color: inherit;">+1-234-567-8901</a>
+      <a href="701087251" style="text-decoration:none; color: inherit;">701087251</a>
     </p>
     <p>
       <i class="bi bi-envelope-fill"></i> 
